Fix overflow issues

--- a/src/styles/components/effect-editor.scss
+++ b/src/styles/components/effect-editor.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 1em;
   text-align: left;
+  overflow: auto;
 
   .effect-editor-pass {
     padding: 0 0 1em 0;
